# phenoShared-niche

./: Cargo.toml  README.md
crates/ffi_utils/: Cargo.toml
crates/ffi_utils/src/: lib.rs
crates/phenotype-cache-adapter/src/adapters/outbound/: mod.rs
crates/phenotype-cache-adapter/src/adapters/outbound/memory/: in_memory.rs
crates/phenotype-event-sourcing/src/application/use_cases/: mod.rs
crates/phenotype-event-sourcing/src/domain/events/: mod.rs
crates/phenotype-http-adapter/src/: error.rs  http_client.rs  lib.rs
crates/phenotype-nanovms-client/: Cargo.toml  NOTICE  README.md
crates/phenotype-nanovms-client/examples/: basic_sandbox.rs
crates/phenotype-nanovms-client/src/: models.rs
crates/phenotype-postgres-adapter/: Cargo.toml
crates/phenotype-postgres-adapter/src/: error.rs  postgres_repository.rs
crates/phenotype-redis-adapter/src/: error.rs  lib.rs
crates/phenotype-test-support/: Cargo.toml
crates/phenotype-test-support/src/: lib.rs
crates/phenotype-test-support/src/bdd/: mod.rs  steps.rs
