[package]
name = "phenotype-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared BDD (cucumber) test harness, world state, and helper types for Phenotype ecosystem crates"
repository = "https://github.com/phenotype-dev/phenotype-shared"
publish = false

[dependencies]
cucumber = "0.21"
uuid = { version = "1.11", features = ["v4"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
